--- a/css/main.css
+++ b/css/main.css
@@ -76,3 +76,13 @@ form button {
 .current a:link{
   background-color: white;
 }
+
+a.skip-main {
+  left:-999px;
+  position:absolute;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+  z-index:-999;
+}
